@@ -6,8 +6,8 @@ exterminate
     :tags: fort armok units
 
 Kills any unit, or all undead, or all units of a given race. You can target any
-unit on a revealed tile of the map, including ambushers, but caged/chained
-creatures cannot be killed with this tool.
+unit on a revealed tile of the map, including hidden ambushers, but caged or
+chained creatures cannot be killed with this tool.
 
 Usage
 -----
@@ -19,6 +19,8 @@ Usage
     exterminate undead [<options>]
     exterminate <race>[:<caste>] [<options>]
 
+Race and caste names are case insensitive.
+
 Examples
 --------
 
@@ -28,7 +30,7 @@ Examples
     List the targets on your map.
 ``exterminate BIRD_RAVEN:MALE``
     Kill the ravens flying around the map (but only the male ones).
-``exterminate GOBLIN --method magma --only-visible``
+``exterminate goblin --method magma --only-visible``
     Kill all visible, hostile goblins on the map by boiling them in magma.
 
 Options
